objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>CPP Leads</fullName>
        <description>Used for CPP Team</description>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Data</fullName>
        </values>
        <values>
            <fullName>Email Sent</fullName>
        </values>
        <values>
            <fullName>Left Voicemail</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Answer</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Data</fullName>
        </values>
        <values>
            <fullName>Bad Info</fullName>
        </values>
        <values>
            <fullName>Confirmed Existence</fullName>
        </values>
        <values>
            <fullName>Non-Approved Segment</fullName>
        </values>
        <values>
            <fullName>Non-Core Location</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Record</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>WBN Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Data</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Not Qualified</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Yodle Local Leads</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Bad Data</fullName>
        </values>
        <values>
            <fullName>Bad Info</fullName>
        </values>
        <values>
            <fullName>Confirmed Existence</fullName>
        </values>
        <values>
            <fullName>Non-Approved Segment</fullName>
        </values>
        <values>
            <fullName>Non-Core Location</fullName>
        </values>
        <values>
            <fullName>Not Interested</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Record</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Activity_Indicator__c</fullName>
        <formula>IF(  ISNULL(Days_Since_Last_Activity__c), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmy", "NO ACTIVITIES"), IF( AND (Days_Since_Last_Activity__c &gt;=0, Days_Since_Last_Activity__c&lt;20), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmo","Less than 15") , IF(AND(Days_Since_Last_Activity__c&gt; 20,Days_Since_Last_Activity__c&lt; 40),IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmj","15 to 30"), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hme","More than 30"))))</formula>
        <label>Activity Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Dislikes__c</fullName>
        <label>Advertising Dislikes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advertising_Likes__c</fullName>
        <label>Advertising Likes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternate_Website__c</fullName>
        <label>Alternate Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annual_PEV__c</fullName>
        <inlineHelpText>annual potential enterprise value</inlineHelpText>
        <label>Annual PEV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appointment_Date_VS__c</fullName>
        <label>Appointment Date (VS)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appropriate_for_LaunchPad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appropriate for LaunchPad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associations__c</fullName>
        <inlineHelpText>What types of associations does the company belong to?</inlineHelpText>
        <label>Associations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Available_Discounts_or_Promotions__c</fullName>
        <label>Available Discounts or Promotions</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Berry_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Berry Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Description__c</fullName>
        <label>Business Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours_of_Operation__c</fullName>
        <label>Business Hours of Operation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Citysearch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citysearch?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <inlineHelpText>Number of individual locations</inlineHelpText>
        <label>Company Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Connected_with_DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Connected with DM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Consultative_Data_Dept__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consultative Data Dept</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corporate_Objectives__c</fullName>
        <label>Corporate Objectives</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Website__c</fullName>
        <label>Corporate Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <label>Created By Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_TIME__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created TIME</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Advertising_Contract_End_Date__c</fullName>
        <inlineHelpText>If a prospect is under contract within their current advertising, put that contract end date here.</inlineHelpText>
        <label>Current Advertising Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Advertising_Sources__c</fullName>
        <label>Current Advertising Sources?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Current_Annual_Marketing_Spend__c</fullName>
        <label>Current Annual Marketing Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_s_Competitors__c</fullName>
        <label>Customer's Competitors</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DKI_Promo_Code__c</fullName>
        <label>DKI Promo Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS_n__c</fullName>
        <label>DUNS/InfoUSA Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Appended__c</fullName>
        <label>Data Appended</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_First_Contact__c</fullName>
        <label>Date/Time of First Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_modified__c</fullName>
        <formula>NOW()- LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since modified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dex__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dex?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Did_Not_Purchase_LaunchPad__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if, after having a thorough conversation with prospect, they are not interested in LaunchPad.</inlineHelpText>
        <label>Did Not Purchase LaunchPad?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Strategy_Overview__c</fullName>
        <label>Digital Strategy Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Company__c</fullName>
        <description>JCI portal</description>
        <label>Distributor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_SEO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does SEO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_Redistribute__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be checked off so that a lead won't be redistributed to the general pool</inlineHelpText>
        <label>Don't Redistribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Don_t_Send_Email_Blasts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Don't Send Email Blasts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eariliest_Close_Date_VS__c</fullName>
        <label>Eariliest Close Date (VS)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expired__c</fullName>
        <label>Expired</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_Profile__c</fullName>
        <label>Facebook Profile</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads (Financial Decision Maker)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Name_for_converting__c</fullName>
        <label>First Name (for converting)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchisee_1_Email__c</fullName>
        <label>Franchisee 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Franchisee_1_Name__c</fullName>
        <label>Franchisee 1 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchisee_1_Phone__c</fullName>
        <label>Franchisee 1 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Franchisee_2_Email__c</fullName>
        <label>Franchisee 2 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Franchisee_2_Name__c</fullName>
        <label>Franchisee 2 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchisee_2_Phone__c</fullName>
        <label>Franchisee 2 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Franchisee_3_Email__c</fullName>
        <label>Franchisee 3 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Franchisee_3_Name__c</fullName>
        <label>Franchisee 3 Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchisee_3_Phone__c</fullName>
        <label>Franchisee 3 Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Freebird_Assist_Exec__c</fullName>
        <label>Freebird Assist Exec</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Freebird_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freebird Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geographical_Areas_to_Service__c</fullName>
        <label>Geographical Areas to Service?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Video_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Video Online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_an_Adwords_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has an Adwords Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_do_decisions_get_made_within_an_org__c</fullName>
        <inlineHelpText>Examples - through agency, through committee</inlineHelpText>
        <label>How do decisions get made within an org?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hub_Survey_Email_Sent__c</fullName>
        <label>Hub Survey Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IMS_Referral__c</fullName>
        <label>IMS Referral</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_what_is_your_title__c</fullName>
        <label>If Other, what is your title?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Program_in_past_website__c</fullName>
        <label>If Program in past, website?</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Immediate_Parent_Company__c</fullName>
        <label>Immediate Parent Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_open_sales__c</fullName>
        <formula>if(
 OwnerId ="00G60000000xsOk",
"yes","no"
)</formula>
        <label>In open sales</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Average_Conversion_Rate__c</fullName>
        <label>Industry Average Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Industry_Average_Cost_per_Click__c</fullName>
        <label>Industry Average Cost per Click</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Average_Cost_per_Sale__c</fullName>
        <label>Industry Average Cost per Sale</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Industry_Average_PPL__c</fullName>
        <label>Industry Average PPL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JCI_About_Us_Content__c</fullName>
        <label>JCI About Us Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JCI_Angies_List_Link__c</fullName>
        <label>JCI Angies List Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Custom_Logo__c</fullName>
        <label>JCI Custom Logo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Facebook_Link__c</fullName>
        <label>JCI Facebook Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Google_Link__c</fullName>
        <label>JCI Google+ Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_Liberties_ID_Number__c</fullName>
        <label>JCI Liberties ID Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JCI_Twitter_Link__c</fullName>
        <label>JCI Twitter Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JCI_YouTube_Link__c</fullName>
        <label>JCI YouTube Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name_for_converting__c</fullName>
        <label>Last Name (for converting)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaunchPad_DB_Marketing__c</fullName>
        <inlineHelpText>for Marketo</inlineHelpText>
        <label>LaunchPad DB Marketing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Record_type_Conversion__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Record type (Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail_2__c</fullName>
        <inlineHelpText>for alternate testing</inlineHelpText>
        <label>Lead Source Detail 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Warming_Campaign__c</fullName>
        <label>Lead Warming Campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Connection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LinkedIn Connection?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Linkedin_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Revenue_Service_Offered__c</fullName>
        <label>Main Revenue Service Offered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <inlineHelpText>For yodle.info routing.</inlineHelpText>
        <label>Manager</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark_for_Deletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mark for Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact__c</fullName>
        <label>Marketing Contact</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Email__c</fullName>
        <label>Marketing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Strategy_Overview__c</fullName>
        <label>Marketing Strategy Overview</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Tagline__c</fullName>
        <label>Marketing Tagline</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Advertising_Spend__c</fullName>
        <label>How much - spend on Advertising?</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Management_Fees__c</fullName>
        <defaultValue>57</defaultValue>
        <label>Monthly Management Fees</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAICS__c</fullName>
        <label>NAICS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Notes__c</fullName>
        <inlineHelpText>SDR notes field</inlineHelpText>
        <label>National Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_clients_in_the_next_30_days__c</fullName>
        <label>New clients in the next 30 days?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Activity_Date__c</fullName>
        <label>Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Locations__c</fullName>
        <label>No. of Locations</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Services_Offered__c</fullName>
        <label>Number of Services Offered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Annual_Marketing_Budget__c</fullName>
        <label>Online Annual Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Advertising_Companies_in_past__c</fullName>
        <label>Other Advertising Companies in past?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <description>Name of individual or organization</description>
        <label>Owner Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PF_Warm_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PF Warm Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paid_Search_Rank__c</fullName>
        <label>Paid Search Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_3rd_Party_Name__c</fullName>
        <label>Partner/3rd Party Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner ID</label>
        <referenceTo>Partner_Name__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Methods__c</fullName>
        <label>Payment Methods</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permission_to_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Permission to Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_for_converting__c</fullName>
        <label>Phone (for converting)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Possible_Dupe__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if possible duplicate detected by PerfectCall</description>
        <label>Possible Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Premium_List__c</fullName>
        <inlineHelpText>For Exclusive list coding</inlineHelpText>
        <label>Premium List</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Print_Yellowpages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Yellowpages?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProfitFuel_ID__c</fullName>
        <label>ProfitFuel ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Strategy__c</fullName>
        <label>Promotion/Coupon Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Prospect_Contact_ID__c</fullName>
        <description>Prospect Contact ID from ProspectDB</description>
        <label>Prospect Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_ID__c</fullName>
        <externalId>true</externalId>
        <label>Prospect ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Tier__c</fullName>
        <formula>if(
 Annual_PEV__c &lt; 100000, "Tier 6",
if(
 Annual_PEV__c &lt; 250000, "Tier 5",
if(
 Annual_PEV__c &lt; 500000, "Tier 4",
if(
 Annual_PEV__c &lt; 1000000, "Tier 3",
if(
 Annual_PEV__c &lt; 5000000, "Tier 2",
if(
 Annual_PEV__c &gt;= 5000000, "Tier 1",
"NA"))))))</formula>
        <label>YBN Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Total_Score__c</fullName>
        <label>Prospect Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Owner__c</fullName>
        <formula>if(
 (OwnerId="00G60000000xsOk"),
"open",
""
)</formula>
        <label>Queue Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Red_Ventures__c</fullName>
        <formula>IF(  owned_by_partner__c ="true",IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmo","AVAILABLE"),IF((Days_Since_Last_Activity__c&lt;=40), IMAGE("/servlet/servlet.FileDownload?file=015600000009Hme","NOT AVAILABLE") , IMAGE("/servlet/servlet.FileDownload?file=015600000009Hmo","AVAILABLE")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDR_Ownership__c</fullName>
        <label>SDR Ownership</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Page_Ranked__c</fullName>
        <label>SEO Page Ranked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Header__c</fullName>
        <description>Description of businesses as documented by SIC Code rules.</description>
        <label>SIC Code Header</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <description>SIC Code is a number used to specify what industry a particular company belongs to. Standard Industrial Classification.</description>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation1__c</fullName>
        <formula>CASE( Salutation , "mr.", "Mr.", "Ms.", "Ms.", "Miss", "Miss", "Mrs.", "mrs.", "Dr.", "Dr.","")</formula>
        <label>Salutation1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Other__c</fullName>
        <label>Segment Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sell_Side_Link__c</fullName>
        <label>Sell Side Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Service_Needed__c</fullName>
        <label>Services Needed</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Offered__c</fullName>
        <label>Services Offered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Source_Segments__c</fullName>
        <label>Source Segments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spend_last_month_on_each_source__c</fullName>
        <label>Spend last month on each source?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_Starter_Email_Sent__c</fullName>
        <label>StepStarter Email Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superpages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Superpages?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TMP_Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TMP Free Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_ID__c</fullName>
        <label>Template ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Toll_Free_Number__c</fullName>
        <label>Toll Free Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Annual_Marketing_Budget__c</fullName>
        <label>Total Annual Marketing Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Locations__c</fullName>
        <inlineHelpText>Number of individual locations in a relationship</inlineHelpText>
        <label>Total Number of Individual Locations</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Activities__c</fullName>
        <label>Total # of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Name__c</fullName>
        <label>Trade Show Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Reason__c</fullName>
        <inlineHelpText>Why are you transferring this lead to the Austin team?  In a few words</inlineHelpText>
        <label>Transfer Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Twitter_Account__c</fullName>
        <label>Twitter Account</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Universal_Segment_for_National__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Universal Segment (for National)</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Uses_Adwords__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this if company has an adwords account</inlineHelpText>
        <label>Uses Adwords?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>